// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots EventDisplay complete version 1`] = `
<aside
  className="event-display-wrapper"
>
  <div
    className="event-display-box"
  >
    <h3
      className="event-display-title"
    >
      Event Title
      <span
        className="evento"
      >
        evento
      </span>
    </h3>
    <ul
      className="event-display-list"
    >
      <li
        className="event-display-item"
      >
        <figure>
          <img
            alt="User 01"
            src="http://i.pravatar.cc/300"
          />
        </figure>
      </li>
      <li
        className="event-display-item"
      >
        <figure>
          <img
            alt="User 02"
            src="http://i.pravatar.cc/300"
          />
        </figure>
      </li>
      <li
        className="event-display-item"
      >
        <figure>
          <img
            alt="User 03"
            src="http://i.pravatar.cc/300"
          />
        </figure>
      </li>
      <li
        className="event-display-item"
      >
        <figure>
          <img
            alt="User 04"
            src="http://i.pravatar.cc/300"
          />
        </figure>
      </li>
    </ul>
  </div>
  <div
    className="event-display-box"
  >
    <h4
      className="event-display-period"
    >
      13/03/2018
    </h4>
  </div>
</aside>
`;

exports[`Storyshots EventDisplay empty 1`] = `
<aside
  className="event-display-wrapper"
>
  <div
    className="event-display-box"
  >
    <h3
      className="event-display-title"
    >
      
      <span
        className=""
      >
        
      </span>
    </h3>
    <ul
      className="event-display-list"
    />
  </div>
  <div
    className="event-display-box"
  >
    <h4
      className="event-display-period"
    >
      
    </h4>
  </div>
</aside>
`;

exports[`Storyshots EventDisplay with event as a type 1`] = `
<aside
  className="event-display-wrapper"
>
  <div
    className="event-display-box"
  >
    <h3
      className="event-display-title"
    >
      Event Title
      <span
        className="evento"
      >
        evento
      </span>
    </h3>
    <ul
      className="event-display-list"
    />
  </div>
  <div
    className="event-display-box"
  >
    <h4
      className="event-display-period"
    >
      
    </h4>
  </div>
</aside>
`;

exports[`Storyshots EventDisplay with feriado as a type 1`] = `
<aside
  className="event-display-wrapper"
>
  <div
    className="event-display-box"
  >
    <h3
      className="event-display-title"
    >
      Event Title
      <span
        className="feriado"
      >
        feriado
      </span>
    </h3>
    <ul
      className="event-display-list"
    />
  </div>
  <div
    className="event-display-box"
  >
    <h4
      className="event-display-period"
    >
      
    </h4>
  </div>
</aside>
`;

exports[`Storyshots EventDisplay with period 1`] = `
<aside
  className="event-display-wrapper"
>
  <div
    className="event-display-box"
  >
    <h3
      className="event-display-title"
    >
      
      <span
        className=""
      >
        
      </span>
    </h3>
    <ul
      className="event-display-list"
    />
  </div>
  <div
    className="event-display-box"
  >
    <h4
      className="event-display-period"
    >
      13/03/2018
    </h4>
  </div>
</aside>
`;

exports[`Storyshots EventDisplay with pessoal as a type 1`] = `
<aside
  className="event-display-wrapper"
>
  <div
    className="event-display-box"
  >
    <h3
      className="event-display-title"
    >
      Event Title
      <span
        className="pessoal"
      >
        pessoal
      </span>
    </h3>
    <ul
      className="event-display-list"
    />
  </div>
  <div
    className="event-display-box"
  >
    <h4
      className="event-display-period"
    >
      
    </h4>
  </div>
</aside>
`;

exports[`Storyshots EventDisplay with title 1`] = `
<aside
  className="event-display-wrapper"
>
  <div
    className="event-display-box"
  >
    <h3
      className="event-display-title"
    >
      Event Title
      <span
        className=""
      >
        
      </span>
    </h3>
    <ul
      className="event-display-list"
    />
  </div>
  <div
    className="event-display-box"
  >
    <h4
      className="event-display-period"
    >
      
    </h4>
  </div>
</aside>
`;

exports[`Storyshots EventDisplay with users 1`] = `
<aside
  className="event-display-wrapper"
>
  <div
    className="event-display-box"
  >
    <h3
      className="event-display-title"
    >
      
      <span
        className=""
      >
        
      </span>
    </h3>
    <ul
      className="event-display-list"
    >
      <li
        className="event-display-item"
      >
        <figure>
          <img
            alt="User 01"
            src="http://i.pravatar.cc/300"
          />
        </figure>
      </li>
      <li
        className="event-display-item"
      >
        <figure>
          <img
            alt="User 02"
            src="http://i.pravatar.cc/300"
          />
        </figure>
      </li>
      <li
        className="event-display-item"
      >
        <figure>
          <img
            alt="User 03"
            src="http://i.pravatar.cc/300"
          />
        </figure>
      </li>
      <li
        className="event-display-item"
      >
        <figure>
          <img
            alt="User 04"
            src="http://i.pravatar.cc/300"
          />
        </figure>
      </li>
    </ul>
  </div>
  <div
    className="event-display-box"
  >
    <h4
      className="event-display-period"
    >
      
    </h4>
  </div>
</aside>
`;
